--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="card shadow-sm">
                     <div class="card-body text-center">
-                        <img src="IMG_20240910_094003_129.jpg" alt="Profile Image" class="profile-img">
+                        <img src="IMG_20240827_221649.jpg" alt="Profile Image" class="profile-img">
                         <h2>Sepiyan</h2>
                         <p class="text-muted">Web Developer</p>
                         <p>saya seorang pelajar SMK INFORMATIKA ujian pplg.
